# kgent

./: .gitignore  README.md  config.py  main.py  models.py  pipeline.py  pyproject.toml  repository.py
agent/: __init__.py  agent.py  output.py  prompts.py
agent/dedup/: __init__.py  agent.py
src/: audit.py  main.py  orchestrator.py
src/agent/: __init__.py
src/validation/: __init__.py  ontology-combined.ttl
tests/: conftest.py  test_models.py  test_orchestrator.py
validation/: shacl.py
