[project]
name = "kgent"
version = "0.1.0"
description = "Agentic knowledge graph enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.1",
    "pydantic-ai>=1.83.0",
    "pyshacl>=0.31.0",
    "python-dotenv>=1.2.2",
    "rdflib>=7.6.0",
    "requests>=2.33.1",
    "sparqlwrapper>=2.0.0",
]
